# File-Editor

app-demo/: docker-compose.yml
app-demo/backend/: .gitignore  Dockerfile  local.db  pyproject.toml  run.py
app-demo/backend/routers/: auth.py
app-demo/backend/src/backend/: __init__.py  alembic.ini  database.py  document_parser.py  main.py  models.py
app-demo/backend/src/backend/alembic/: env.py
app-demo/backend/src/backend/alembic/versions/: eb8cec0910b9_init.py
app-demo/backend/src/backend/routers/: auth.py  chat.py  files.py  users.py
app-demo/frontend/: Dockerfile  package.json  pnpm-lock.yaml
app-demo/frontend/src/: middleware.ts  types.ts
app-demo/frontend/src/app/: layout.tsx  page.tsx
app-demo/frontend/src/app/(app)/: layout.tsx
app-demo/frontend/src/app/(app)/chat/: page.tsx
app-demo/frontend/src/app/(app)/files/: page.tsx
app-demo/frontend/src/app/api/auth/login/: route.ts
app-demo/frontend/src/app/api/auth/logout/: route.ts
app-demo/frontend/src/app/api/auth/register/: route.ts
app-demo/frontend/src/app/api/files/: route.ts
app-demo/frontend/src/app/api/files/[file_id]/: route.ts
app-demo/frontend/src/app/api/files/[file_id]/download/: route.ts
app-demo/frontend/src/app/api/users/me/: route.ts
app-demo/frontend/src/app/login/: page.tsx
app-demo/frontend/src/components/: app-sidebar.tsx  data-table.tsx  login-form.tsx  signup-form.tsx
app-demo/frontend/src/contexts/: auth-context.tsx
app-demo/frontend/src/lib/: api-utils.ts
